--- a/README
+++ b/README
@@ -1,1 +1,14 @@
 
+
+03/26/2021:
+
+```
+# Alignment
+# for 2-align-step1.pl
+wget https://cpan.metacpan.org/authors/id/M/MA/MANWAR/SVG-2.85.tar.gz
+tar -zxvf SVG-2.85.tar.gz
+perl Makefile.PL PREFIX=/gpfs/ysm/project/fan/gs592/01_Spatial_Organoid/00.bin/SVG-2.85/mybuild
+make
+make install
+export PERL5LIB=/gpfs/ysm/project/fan/gs592/01_Spatial_Organoid/00.bin/SVG-2.85/mybuild/share/perl5:$PERL5LIB
+```
