--- a/README
+++ b/README
@@ -3,6 +3,11 @@
 03/26/2021:
 
 ```
+# Filter out raw data that do not contain linker sequence
+# edit 00_1.qc_raw_data_L1.sh & 00_2.qc_raw_data_L2.sh for each sample
+sbatch 00_1.qc_raw_data_L1.sh
+sbatch 00_2.qc_raw_data_L2.sh
+```
 # Alignment
 # for 2-align-step1.pl
 wget https://cpan.metacpan.org/authors/id/M/MA/MANWAR/SVG-2.85.tar.gz
@@ -13,9 +18,11 @@ make install
 export PERL5LIB=/gpfs/ysm/project/fan/gs592/01_Spatial_Organoid/00.bin/SVG-2.85/mybuild/share/perl5:$PERL5LIB
 ```
 
+```
 # st-pipeline
 # edit 2-st-pipeline.sh & stp.sh
 srun --pty -p interactive -c 8 --mem=64g bash
 module load miniconda
 conda activate st-pipeline
 dSQ --job-file stp.sh --mail-type=ALL --partition=scavenge --cpus-per-task=16 --mem-per-cpu=4g --submit
+```
