--- a/README
+++ b/README
@@ -68,6 +68,7 @@ install.packages("pacman")
 install.packages("BiocManager")
 install.packages("Rmagic")
 devtools::install_github("gadenbuie/rsthemes")
+#devtools::install_github("aertslab/cisTopic")
 library(rsthemes)
 rsthemes::install_rsthemes()
 pacman::p_load(~your_packages~)
